--- a/requirements.txt
+++ b/requirements.txt
@@ -79,12 +79,14 @@ scipy==1.8.0
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
+sqlalchemy==1.4.32
 stack-data==0.2.0
 starlette==0.17.1
 terminado==0.13.1
 testpath==0.6.0
 threadpoolctl==3.1.0
 tomli==2.0.1
+torch==1.11.0
 tornado==6.1
 traitlets==5.1.1
 typing_extensions==4.0.1
