--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ fonttools==4.29.1
 h11==0.13.0
 httptools==0.2.0
 idna==3.3
+imageio==2.16.1
 ipykernel==6.9.1
 ipython==8.1.0
 ipython-genutils==0.2.0
@@ -80,6 +81,7 @@ Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
 sqlalchemy==1.4.32
+sqlalchemy-utils==0.38.2
 stack-data==0.2.0
 starlette==0.17.1
 terminado==0.13.1
@@ -87,6 +89,7 @@ testpath==0.6.0
 threadpoolctl==3.1.0
 tomli==2.0.1
 torch==1.11.0
+torchvision==0.12.0
 tornado==6.1
 traitlets==5.1.1
 typing_extensions==4.0.1
