--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -15,6 +15,7 @@
     "d3": "^7.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "ts.data.json": "^2.1.0",
