--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -21,7 +21,7 @@
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.5",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "sass": "^1.49.9",
     "ts.data.json": "^2.1.0",
     "typescript": "^4.6.2",
