--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -22,6 +22,7 @@
     "react-drag-drop-files": "^2.3.5",
     "react-icons": "^4.3.1",
     "react-scripts": "^5.0.0",
+    "react-svg-radar-chart": "^1.4.0",
     "sass": "^1.49.9",
     "ts.data.json": "^2.1.0",
     "typescript": "^4.6.2",
